<resources>
    <string name="app_name">IntentProject</string>
    <string name="pindah_halaman">Pindah ke Activity Baru</string>
    <string name="pindah_halaman_data">Pindah ke Activity Baru dengan Data</string>
    <string name="pindah_halaman_objek">Pindah ke Activity Baru dengan Objek</string>
    <string name="title_activity_main">Project Intent Implicit dan Explicit</string>
    <string name="title_activity_data">Data Diterima</string>
    <string name="title_telepon">Kontak Langsung</string>
    <string name="title_open_another_app">Buka Aplikasi Lain</string>
    <string name="second_activity">Halaman kedua menggunakan intent biasa untuk pindah halaman</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="gender">Jenis Kelamin Anda</string>">
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="save">Simpan</string>
    <string name="result_halaman_tambah_data">Result dari Halaman Tambah Data</string>
</resources>