<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_main"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/btn_pindah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_halaman"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_pindah_dengan_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_halaman_data"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_pindah_dengan_objek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah_halaman_objek"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_telepon"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_another_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_open_another_app"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_for_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_data"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_halaman_tambah_data"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        />


</LinearLayout>